syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option csharp_namespace = "Ligric.Protobuf";

package ligric.protobuf;

service Auth {
	rpc SignIn(SignInRequest) returns (SignInResponse){
	  option (google.api.http) = {
		  post: "/v1/auth/signin"
		  body: "*"
	  };
    }
	rpc SignUp(SignUpRequest) returns (SignUpResponse){
	  option (google.api.http) = {
		  post: "/v1/auth/signup"
		  body: "*"
	  };
    }

	rpc Logout(google.protobuf.Empty) returns (ResponseResult);

	rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse){
	  option (google.api.http) = {
		  post: "/v1/auth/refreshToken"
		  body: "*"
	  };
    }

	rpc IsLoginUnique(CheckExistsRequest) returns (CheckExistsResponse);
}

message SignInRequest {
	string login = 1;
	string password = 2; 
}

message SignInResponse {
	int64 id = 1;
	string role = 2;
	JwtToken jwtToken = 3;
	ResponseResult result = 4;
}

message SignUpRequest {
	string login = 1;
	string password = 2;
}

message SignUpResponse {
	int64 id = 1;
	JwtToken jwtToken = 2;
	ResponseResult result = 3;
}

message CheckExistsRequest {
	string Value = 1;
}

message CheckExistsResponse {
	bool isUnique = 1;
	ResponseResult result = 2;
}

message RefreshTokenRequest
{
	string refreshToken = 1;
}

message RefreshTokenResponse
{
	JwtToken jwtToken = 1;
	ResponseResult result = 2;
}
